--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>src.main.Nimoh</mainClass> <!--Change this to your main class-->
+                            <mainClass>io.jadiefication.Nimoh</mainClass> <!--Change this to your main class-->
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -69,6 +69,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>io.ebean</groupId>
+            <artifactId>ebean</artifactId>
+            <version>13.17.2</version>
         </dependency>
 
     </dependencies>
