--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,6 +7,7 @@
         <groupId>io.bladeball</groupId>
         <artifactId>server</artifactId>
         <version>1.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>common</artifactId>
