--- a/main/pom.xml
+++ b/main/pom.xml
@@ -7,6 +7,7 @@
         <groupId>io.bladeball</groupId>
         <artifactId>server</artifactId>
         <version>1.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>main</artifactId>
@@ -16,6 +17,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.bladeball</groupId>
@@ -24,5 +26,4 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
 </project>
